tried to add images to README

--- a/output/team.html
+++ b/output/team.html
@@ -25,27 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Suzy</h2>
+        <h2 class="card-title">Scott</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 8</li>
-            <li class="list-group-item">Email: <a href="mailto:suzy@aol.com">suzy@aol.com</a></li>
-            <li class="list-group-item">Office number: 7145364867</li>
+            <li class="list-group-item">ID: 012</li>
+            <li class="list-group-item">Email: <a href="mailto:dunhamcastillo@gmail.com">dunhamcastillo@gmail.com</a></li>
+            <li class="list-group-item">Office number: 310-730-9082</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Tim</h2>
+        <h2 class="card-title">Robert</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 6</li>
-            <li class="list-group-item">Email: <a href="mailto:tim@yahoo.com">tim@yahoo.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/tim" target="_blank" rel="noopener noreferrer">tim</a></li>
+            <li class="list-group-item">ID: 087</li>
+            <li class="list-group-item">Email: <a href="mailto:robert@yahoo.com">robert@yahoo.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/robertMurr" target="_blank" rel="noopener noreferrer">robertMurr</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Trudy</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 043</li>
+            <li class="list-group-item">Email: <a href="mailto:trudy@hotmail.com">trudy@hotmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/trudyTime" target="_blank" rel="noopener noreferrer">trudyTime</a></li>
         </ul>
     </div>
 </div>
@@ -56,9 +69,22 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 9</li>
+            <li class="list-group-item">ID: 089</li>
             <li class="list-group-item">Email: <a href="mailto:sphcastillo@gmail.com">sphcastillo@gmail.com</a></li>
             <li class="list-group-item">School: UCLA</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Molly</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 076</li>
+            <li class="list-group-item">Email: <a href="mailto:molly@aol.com">molly@aol.com</a></li>
+            <li class="list-group-item">School: UCI</li>
         </ul>
     </div>
 </div>
